.provarCaches/00D5f000005vwGkEAI/objects/rstk__herokuconfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Heroku connection configuration</description>
    <fields>
        <fullName>rstk__app_name__c</fullName>
        <description>App_name represents the Connected APP name for query</description>
        <label>app_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__base_url__c</fullName>
        <description>base_URL formulates the target URL to DOX application on WEB server</description>
        <label>base_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__client_key__c</fullName>
        <description>CLIENT_KEY for connected app</description>
        <label>client_key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__client_secret__c</fullName>
        <description>CLIENT_SECRET for connnected app</description>
        <label>client_secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__org_name__c</fullName>
        <description>This Org Name value to be used across Heroku and will be used as schema name as well on Postgres DB.</description>
        <label>org_name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__private_key__c</fullName>
        <description>PRIVATE_KEY of AES128 encode</description>
        <label>private_key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__redirect_url__c</fullName>
        <description>REDIRECT_URL is a callback URL for Connected app</description>
        <label>redirect_url</label>
        <type>Url</type>
    </fields>
    <label>Heroku Config</label>
</CustomObject>